--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ matplotlib>=3.7.0
 plotly>=5.14.0
 seaborn>=0.12.0
 langchain>=0.0.267
-langchain-cerebras
+langchain-groq>=0.0.1
+langchain-google-genai>=0.0.3
 python-dotenv>=1.0.0
 scipy>=1.10.0
 joblib>=1.2.0
@@ -15,6 +16,3 @@ requests>=2.28.0
 pillow>=9.0.0
 altair>=4.2.0
 beautifulsoup4>=4.11.0
-xgboost
-
-
