--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,7 @@ matplotlib>=3.7.0
 plotly>=5.14.0
 seaborn>=0.12.0
 langchain>=0.0.267
-langchain-groq>=0.0.1
-langchain-google-genai>=0.0.3
+langchain-cerebras
 python-dotenv>=1.0.0
 scipy>=1.10.0
 joblib>=1.2.0
